# Asynco

./: CMakeLists.txt  README.md
inc/: Asynco.h  AsyncoCallback.h  AsyncoTask.h  AsyncoTaskManager.h  AsyncoWorkerThread.h
inc/ControlFlow/: AsyncoAuto.h  AsyncoControlFlow.h
sample/: main.cpp
src/: AsyncoTask.cpp  AsyncoTaskManager.cpp  AsyncoWorkerThread.cpp
src/ControlFlow/: AsyncoAuto.cpp
